remove db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=notification-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.application.name=notification-service
+#spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
